[project]
name = "typer-attach"
version = "0.1.0"
description = "Tools to attach extended functionality to typer commands"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.12, ~=3.13"
dependencies = []


[project.urls]
homepage = "https://github.com/dusktreader/typer-attach"
source = "https://github.com/dusktreader/typer-attach"
changelog = "https://github.com/dusktreader/typer-attach/blob/main/CHANGELOG.md"


[dependency-groups]
dev = [
    "basedpyright~=1.28",
    "ipython~=8.18",
    "mkdocs-material~=9.6",
    "mkdocstrings[python]~=0.29",
    "mypy~=1.15",
    "pyclean~=3.1",
    "pygments~=2.19",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-pretty~=1.2",
    "pytest-random-order~=1.1",
    "ruff~=0.11",
    "typos~=1.31",
]


[tool.uv]
package = true


[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=src/typer_attach",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]


[tool.ruff]
line-length = 120
src = ["src/typer_attach", "tests"]


[tool.mypy]
pretty = true
files = ["src/typer_attach", "tests"]


[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true


[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false


[tool.typos.default]
extend-ignore-identifiers-re = []


[tool.hatch.build.targets.wheel]
packages = ["src/typer_attach"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
