[project]
name = "typer-repyt"
version = "0.9.0"
description = "Build Typer commands dynamically"
authors = [
    {name = "Tucker Beck", email ="tucker.beck@gmail.com"},
]
readme = "README.md"
license-files = ["LICENSE.md"]

requires-python = ">=3.12, <3.15"
dependencies = [
    "humanize>=4.12.2",
    "inflection>=0.5.1",
    "py-buzz>=7.3",
    "pydantic>=2.11.3",
    "snick>=2.1",
    "typer>=0.15.2",
]


[project.urls]
homepage = "https://github.com/dusktreader/typer-repyt"
source = "https://github.com/dusktreader/typer-repyt"
changelog = "https://github.com/dusktreader/typer-repyt/blob/main/CHANGELOG.md"

[project.optional-dependencies]
demo = [
    "auto-name-enum>=3.0.0",
    "rich>=14.0.0",
]

[project.scripts]
typer-repyt-demo = "typer_repyt_demo.main:main[cli]"


[dependency-groups]
dev = [
    "debugpy~=1.8",
    "ipython~=8.18",
    "mkdocs-material~=9.6",
    "mkdocstrings[python]~=0.29",
    "pyclean~=3.1",
    "pygments~=2.19",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-mock>=3.14.0",
    "pytest-pretty~=1.2",
    "pytest-random-order~=1.1",
    "ruff~=0.11",
    "ty>=0.0.1a7",
    "typos~=1.31",
]


[tool.uv]
package = true


[tool.pytest.ini_options]
addopts = [
    "--random-order",
    "--cov=src/typer_repyt",
    "--cov-report=term-missing",
    "--cov-fail-under=85",
    "--cov-report=xml:.coverage.xml",
    "--junitxml=.junit.xml",
    "--override-ini=junit_family=legacy",
]


[tool.ruff]
line-length = 120
src = ["src/typer_repyt", "tests"]


[tool.typos.default]
extend-ignore-identifiers-re = []


[tool.uv.build-backend]
module-name = ["typer_repyt", "typer_repyt_demo"]
module-root = "src"


[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
